# GLFW-Project

./: .gitignore  CMakeLists.txt  README  run.sh
assets/shaders/: frag.glsl  vert.glsl
include/glad/: glad.h
src/: glad.c  main.c
src/engine/game/: game.c  game.h
src/engine/input/: input.c  input.h
src/engine/renderer/: renderer.c  renderer.h
src/engine/shaders/: shaders.h
src/engine/ui/: ui.c  ui.h
src/shaders/: shaders.c  shaders.h
